<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/buy_app_bar_id"
        android:icon="@drawable/buy_vector_draw"
        android:title="@string/buySelected"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/sort_app_bar_id"
        android:enabled="true"
        android:icon="@drawable/ic_sort_black_24dp"
        android:title="@string/SortAppButton"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/highlight_app_bar_id"
        android:enabled="true"
        android:icon="@drawable/highlight_icon_draw"
        android:title="@string/HighlightAppButton"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>