<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardview_item"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:layout_margin="5dp"
    android:contextClickable="true"
    android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/light_grey"
    app:cardCornerRadius="25dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:scrollbarSize="15dp"
            android:text="@string/item_name"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shop_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/shop_name"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/item_count_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="44dp"
            android:text="@string/item_count"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_buy_checkbox_id"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.372" />

        <TextView
            android:id="@+id/item_count_buy_id"
            android:layout_width="44dp"
            android:layout_height="46dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:hint="@string/insert_qty"
            android:textStyle="bold"
            android:background="@drawable/edit_text_border"
            android:text="@string/count_number"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <CheckBox
            android:id="@+id/item_buy_checkbox_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="center"
            android:text="@string/buy"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_count_buy_id"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>