<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_item_info"
    tools:context=".ItemInfo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">

        <EditText
            android:id="@+id/edit_note_item_id"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="28dp"
            android:autofillHints=""
            android:background="@drawable/item_info_border"
            android:gravity="center_vertical"
            android:hint="@string/enter_info_about_item"
            android:inputType="text"
            android:paddingStart="14dp"
            android:paddingEnd="14dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/item_name_note_id"
            android:layout_width="209dp"
            android:layout_height="33dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/item_info_border"
            android:gravity="center_vertical"
            android:hint="@string/item_name_hint"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_note_item_id" />

        <TextView
            android:id="@+id/shop_name_note_id"
            android:layout_width="245dp"
            android:layout_height="35dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/item_info_border"
            android:gravity="center_vertical"
            android:hint="@string/shop_name_hint"
            android:text="@string/textview"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name_note_id" />

        <TextView
            android:id="@+id/edit_date_note_id"
            android:layout_width="147dp"
            android:layout_height="47dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/item_info_border"
            android:gravity="center"
            android:hint="@string/set_date"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.939"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_note_item_id" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:background="@drawable/gradient_toolbar"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageButton
                android:id="@+id/button_item_info_go_back"
                android:contentDescription="@string/back_button"
                android:layout_width="wrap_content"
                android:background="@drawable/gradient_toolbar"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back_black_24dp">

            </ImageButton>

        </androidx.appcompat.widget.Toolbar>
        <!--app:layout_constraintBottom_toTopOf="@+id/image_note_id"-->

        <ImageView
            android:id="@+id/image_note_id"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="152dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shop_name_note_id"
            app:srcCompat="@drawable/edit_text_border" />

        <Button
            android:id="@+id/takepicturebutton_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_info"
            android:text="@string/take_picture"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_note_id"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>