<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".AddItemToListActivity">


    <EditText
        android:id="@+id/add_item_name_id"
        android:layout_width="227dp"
        android:layout_height="51dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:hint="@string/item_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/add_shop_name_id"
        android:layout_width="226dp"
        android:layout_height="57dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:hint="@string/shop_name_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_name_id" />

    <EditText
        android:id="@+id/add_item_count_id"
        android:layout_width="169dp"
        android:layout_height="51dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/quantity_hint"
        android:inputType="number"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_shop_name_id" />


    <Button
        android:id="@+id/add_item_add_button_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        android:backgroundTint="@color/button_info"
        android:textColor="@color/black"
        android:text="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_item_count_id"
        app:layout_constraintVertical_bias="0.434" />

</androidx.constraintlayout.widget.ConstraintLayout>